<resources>
    <string name="app_name">PassKeeper</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="pass">Пароль</string>
    <string name="LogIn">Войти</string>
    <string name="fingerprint">Вход по отпечатку</string>
    <string name="register">Зарегистрироваться</string>
    <string name="have_account">У вас уже есть аккаунт!</string>
    <string name="dont_have_account">Сначала зарегистрируйтесь!</string>
    <string name="incorrect_password">Неправильный пароль, попробуйте снова!</string>
    <string name="welcome">Добро пожаловать!</string>
    <string name="registration">Регистрация</string>
    <string name="type_pass">Задайте пароль</string>
    <string name="retype_pass">Повторите пароль</string>
    <string name="incorrect_pass_message">Пароль должен содержать от 8 до 30 символов, хотя бы один символ в другом регистре и хотя бы одну цифру</string>
    <string name="different_pass_message">Пароли должны совпадать</string>
    <string name="try_again">Попробуйте еще раз!</string>
    <string name="success_signUp">Вы успешно зарегистрированы!</string>
    <string name="fingerprint_title">Войти по отпечатку</string>
    <string name="description">description</string>
    <string name="example_name">Example name</string>
    <string name="my_passwords">Мои пароли</string>
    <string name="site_name">Название сайта</string>
    <string name="login">Login</string>
    <string name="url">URL</string>
    <string name="password">Password</string>
    <string name="save">Сохранить</string>
    <string name="success">Успешно сохранено!</string>
    <string name="copy">Пароль скопирован</string>
    <string name="pass_change">Смена пароля</string>
    <string name="new_password">Новый пароль</string>
    <string name="old_Password">Старый пароль</string>
    <string name="change_passsword">Сменить пароль</string>
    <string name="access_finger">Подтвердить отпечатком пальца</string>
    <string name="success_password_change">Успешная смена пароля</string>
    <string name="passwords_same">Пароль должен отличаться от текущего!</string>
</resources>