<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_15sdp"
    tools:context=".adapters.DetailPasswordFragment">

    <EditText
        android:id="@+id/et_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/site_name"
        android:textSize="@dimen/_20sdp"
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/_40sdp"
        android:inputType="text" />

    <EditText
        android:id="@+id/et_url"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/url"
        android:paddingStart="@dimen/_10sdp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_name"
        android:layout_marginTop="@dimen/_20sdp"/>

    <EditText
        android:id="@+id/et_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/login"
        android:paddingStart="@dimen/_10sdp"
        android:inputType="text"
        app:layout_constraintTop_toBottomOf="@id/et_url"
        android:layout_marginTop="@dimen/_10sdp"/>

    <EditText
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/et_login"
        android:layout_marginTop="@dimen/_10sdp"
        android:inputType="textPassword"
        app:passwordToggleEnabled="true"/>

    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/secondary"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginStart="@dimen/_40sdp"
        android:layout_marginEnd="@dimen/_40sdp"
        android:text="@string/save"/>







</androidx.constraintlayout.widget.ConstraintLayout>